--- a/web/admin/src/lang/ja-JP.json
+++ b/web/admin/src/lang/ja-JP.json
@@ -1,4 +1,7 @@
 {
+  "network": {
+    "unAuthorized": "ログインタイムアウト、もう一度ログインしてください"
+  },
   "navbar": {
     "welcome": "Glassy Sky Adminへようこそ"
   },
