[frontend] add route transition/adaptive table

--- a/web/admin/src/lang/en-US.json
+++ b/web/admin/src/lang/en-US.json
@@ -1,6 +1,7 @@
 {
   "network": {
-    "unAuthorized": "Login timeout, please login again"
+    "unAuthorized": "Login timeout, please login again",
+    "internalServerError": "Server error, please try again later"
   },
   "navbar": {
     "welcome": "Welcome to Glassy Sky Admin"
