--- a/web/admin/src/lang/ja-JP.json
+++ b/web/admin/src/lang/ja-JP.json
@@ -1,6 +1,7 @@
 {
   "network": {
-    "unAuthorized": "ログインタイムアウト、もう一度ログインしてください"
+    "unAuthorized": "ログインタイムアウト、もう一度ログインしてください",
+    "internalServerError": "サーバーエラー、後で再試行してください"
   },
   "navbar": {
     "welcome": "Glassy Sky Adminへようこそ"
