[frontend] pagination total

--- a/web/admin/src/lang/en-US.json
+++ b/web/admin/src/lang/en-US.json
@@ -12,6 +12,7 @@
   },
   "common-tips": {
     "noData": "No Data",
+    "total": "Total {{total}} items",
     "deleteConfirm": "Are you sure to delete this item?",
     "deleteSuccess": "Delete successfully",
     "createSuccess": "Create successfully",
