feat: remove user

--- a/web/admin/src/lang/en-US.json
+++ b/web/admin/src/lang/en-US.json
@@ -20,6 +20,7 @@
   },
   "common-title": {
     "username": "User Name",
+    "nickname": "Nickname",
     "email": "Email",
     "phone": "Phone",
     "labelName": "Label Name",
